--- a/airtecWebservice/patients/templates/patients/home.html
+++ b/airtecWebservice/patients/templates/patients/home.html
@@ -3,6 +3,7 @@
 {% block title %}My Page Title{% endblock %}
 
 {% block content %}
-    <h1>Welcome to my page!</h1>
-    <p>This is some sample content.</p>
+    <div>
+        Welcome to the Home Page.
+    </div>
 {% endblock %}
