Add js three which serves stl file, map three libaries

--- a/airtecWebservice/patients/templates/patients/home.html
+++ b/airtecWebservice/patients/templates/patients/home.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block title %}My Page Title{% endblock %}
 
 {% block content %}
-    <div>
-        Welcome to the Home Page.
-    </div>
+<div id="container"></div>
+<script type="module" src="{% static 'patients/main.js' %}"></script>
 {% endblock %}
