--- a/airtecWebservice/templates/base.html
+++ b/airtecWebservice/templates/base.html
@@ -7,6 +7,20 @@
     {% bootstrap_javascript %}
     {% bootstrap_messages %}
     <title>{% block title %}{% endblock %}</title>
+    <script async src="https://unpkg.com/es-module-shims@1.8.0/dist/es-module-shims.js"></script>
+
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://unpkg.com/three@0.156.1/build/three.module.js",
+          "three/addons/": "https://unpkg.com/three@0.156.1/examples/jsm/",
+          "three/examples/jsm/controls/OrbitControls": "https://unpkg.com/three@0.156.1/examples/jsm/controls/OrbitControls",
+          "three/examples/jsm/loaders/STLLoader": "https://unpkg.com/three@0.156.1/examples/jsm/loaders/STLLoader",
+          "three/examples/jsm/loaders/OBJLoader": "https://unpkg.com/three@0.156.1/examples/jsm/loaders/OBJLoader",
+          "three/examples/jsm/libs/stats.module": "https://unpkg.com/three@0.156.1/examples/jsm/libs/stats.module"
+        }
+      }
+    </script>
 </head>
 <body>
     <ul class="nav nav-tabs">
