--- a/airtecWebservice/patients/templates/patients/list_patients.html
+++ b/airtecWebservice/patients/templates/patients/list_patients.html
@@ -1,12 +1,28 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-8 mt-3">
 
+            <form method="get">
+                <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="Search patients" name="q" value="{{ request.GET.q }}">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="submit">Search</button>
+                </div>
+                </div>
+            </form>
 
-<ul class="list-group">
-{% for patient in patients %}
-    <li class="list-group-item" aria-current="true">{{patient.patient_id}}</li>
-{% endfor %}
-</ul>
+            <ul class="list-group">
+            {% for patient in patients %}
+                <li class="list-group-item list-group-item-action" aria-current="true">
+                    <a class="nav-link active" aria-current="page" href="{% url 'detail' patient.patient_id %}">{{patient.patient_id}}</a>
+                </li>
+            {% endfor %}
+            </ul>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
