--- a/airtecWebservice/patients/templates/patients/detail.html
+++ b/airtecWebservice/patients/templates/patients/detail.html
@@ -1,16 +1,41 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>{{ patient.patient_id }}</h1>
-    <p>Größe: {{ patient.größe }}</p>
-    <p>Gewicht: {{ patient.gewicht }}</p>
-    <p>Geschlecht: {{ patient.geschlecht }}</p>
-    <p>Alter: {{ patient.alter }}</p>
-    <p>Andere Informationen: {{ patient.andere_informationen }}</p>
-    <p>Gesichtstyp: {{ patient.gesichtstyp }}</p>
-    <p>Prothesenträger: {{ patient.prothesenträger }}</p>
-    <p>Prothese: {{ patient.prothese }}</p>
-    <p>Abdruck Zeitpunkt: {{ patient.abdruck_zeitpunkt }}</p>
-    <p>Abdruck Ort: {{ patient.abdruck_ort }}</p>
-    <p>Maske: {{ patient.maske }}</p>
+<h1>Patient: {{ patient.patient_id }}</h1>
+<div class="accordion" id="accordionPatientInformation">
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="headingPatient">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            Patient Information
+        </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingPatient" data-bs-parent="#accordionPatientInformation">
+          <div class="accordion-body">
+            <p>Größe: {{ patient.größe }}</p>
+            <p>Gewicht: {{ patient.gewicht }}</p>
+            <p>Geschlecht: {{ patient.geschlecht }}</p>
+            <p>Alter: {{ patient.alter }}</p>
+            <p>Andere Informationen: {{ patient.andere_informationen }}</p>
+            <p>Gesichtstyp: {{ patient.gesichtstyp }}</p>
+            <p>Prothesenträger: {{ patient.prothesenträger }}</p>
+            <p>Prothese: {{ patient.prothese }}</p>
+            <p>Abdruck Zeitpunkt: {{ patient.abdruck_zeitpunkt }}</p>
+            <p>Abdruck Ort: {{ patient.abdruck_ort }}</p>
+            <p>Maske: {{ patient.maske }}</p>        </div>
+        </div>
+    </div>
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="headingMask">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseMask" aria-expanded="false" aria-controls="collapseMask">
+            Patients Mask
+        </button>
+        </h2>
+        <div id="collapseMask" class="accordion-collapse collapse" aria-labelledby="headingMask" data-bs-parent="#accordionPatientInformation">
+          <div class="accordion-body">
+            {{patient.mask}}
+            <a class="btn btn-primary" href="{% url 'create_mask' patient.patient_id%}">Create Mask</a>
+        </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
