--- a/airtecWebservice/templates/base.html
+++ b/airtecWebservice/templates/base.html
@@ -19,17 +19,14 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'create_patient' %}">Add Patient</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
         <!--If user is logged in show logout otherwise show login-->
         {% if user.is_authenticated %}
         <li class="nav-item ms-auto">
-          <a class="nav-link" href="#">Logout</a>
+          <a class="nav-link" href="{% url 'logout' %}">Logout</a>
         </li>
         {% else %}
         <li class="nav-item ms-auto">
-          <a class="nav-link" href="">Login</a>
+          <a class="nav-link" href="{% url 'login' %}">Login</a>
         </li>
         {% endif %}
     </ul>
