--- a/airtecWebservice/templates/base.html
+++ b/airtecWebservice/templates/base.html
@@ -20,6 +20,9 @@
           <a class="nav-link" href="{% url 'create_patient' %}">Add Patient</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{% url 'create_insurance' %}">Add Insurance</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li>
         <!--If user is logged in show logout otherwise show login-->
