--- a/airtecWebservice/patients/templates/patients/detail.html
+++ b/airtecWebservice/patients/templates/patients/detail.html
@@ -5,47 +5,63 @@
 <div class="accordion" id="accordionPatientInformation">
     <div class="accordion-item">
         <h2 class="accordion-header" id="headingPatient">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-            Patient Information
-        </button>
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                Patient Information
+            </button>
         </h2>
         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingPatient" data-bs-parent="#accordionPatientInformation">
-          <div class="accordion-body">
-            <hr>
-            <p>Größe: {{ patient.größe }} cm</p>
-            <hr>
-            <p>Gewicht: {{ patient.gewicht }} kg</p>
-            <hr>
-            <p>Geschlecht: {{ patient.geschlecht }}</p>
-            <hr>
-            <p>Alter: {{ patient.alter }} Jahre</p>
-            <hr>
-            <p>Andere Informationen: {{ patient.andere_informationen }}</p>
-            <hr>
-            <p>Gesichtstyp: {{ patient.gesichtstyp }}</p>
-            <hr>
-            <p>Prothesenträger: {{ patient.prothesenträger }}</p>
-            <hr>
-            <p>Prothese: {{ patient.prothese }}</p>
-            <hr>
-            <p>Abdruck Zeitpunkt: {{ patient.abdruck_zeitpunkt }}</p>
-            <hr>
-            <p>Abdruck Ort: {{ patient.abdruck_ort }}</p>
-            <hr>
+            <div class="accordion-body">
+                <hr>
+                <!-- Weitere Patienteninformationen hier -->
+                <!-- ... -->
+            </div>
         </div>
     </div>
+
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="headingInsurance">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                Insurance Information
+            </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingInsurance" data-bs-parent="#accordionPatientInformation">
+            <div class="accordion-body">
+                {% if insurance_company %}
+                <h2>Versicherungsunternehmen</h2>
+                <p>Name: {{ insurance_company.versicherungsunternehmen }}</p>
+                <p>Adresse: {{ insurance_company.strasse }}, {{ insurance_company.postleitzahl }} {{ insurance_company.stadt }}</p>
+                <p>Telefon: {{ insurance_company.telefon }}</p>
+                <p>Fax: {{ insurance_company.fax_nummer }}</p>
+                {% else %}
+                <p>Kein Versicherungsunternehmen gefunden.</p>
+                <form method="POST" action="{% url 'detail' patient_id=patient.patient_id %}">
+                    {% csrf_token %}
+                    <label for="versicherungsunternehmen">Versicherungsunternehmen</label>
+                    <select name="Versicherungsunternehmen" id="Versicherungsunternehmen">
+                        <option value="" selected disabled>Wählen Sie ein Versicherungsunternehmen aus</option>
+                        {% for versicherung in versicherungsunternehmen_list %}
+                        <option value="{{ versicherung.id }}">{{ versicherung.versicherungsunternehmen }}</option>
+                        {% endfor %}
+                    </select>
+                    <button type="submit" class="btn btn-primary">Erstellen</button>
+                </form>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+
     <div class="accordion-item">
         <h2 class="accordion-header" id="headingMask">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseMask" aria-expanded="false" aria-controls="collapseMask">
-            Patients Mask
-        </button>
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseMask" aria-expanded="false" aria-controls="collapseMask">
+                Patients Mask
+            </button>
         </h2>
         <div id="collapseMask" class="accordion-collapse collapse" aria-labelledby="headingMask" data-bs-parent="#accordionPatientInformation">
-          <div class="accordion-body">
-            {{patient.mask}}
-            {% include 'patients/mask_detail.html' with masken=patient.masken %}
-            <a class="btn btn-primary" href="{% url 'create_mask' patient.patient_id%}">Create Mask</a>
-        </div>
+            <div class="accordion-body">
+                {{ patient.mask }}
+                {% include 'patients/mask_detail.html' with masken=patient.masken %}
+                <a class="btn btn-primary" href="{% url 'create_mask' patient.patient_id %}">Create Mask</a>
+            </div>
         </div>
     </div>
 </div>
