Remove all not needed fields after removing them from models.py

--- a/airtecWebservice/patients/templates/patients/detail.html
+++ b/airtecWebservice/patients/templates/patients/detail.html
@@ -11,27 +11,7 @@
         </h2>
         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingPatient" data-bs-parent="#accordionPatientInformation">
           <div class="accordion-body">
-            <hr>
-            <p>Größe: {{ patient.größe }} cm</p>
-            <hr>
-            <p>Gewicht: {{ patient.gewicht }} kg</p>
-            <hr>
-            <p>Geschlecht: {{ patient.geschlecht }}</p>
-            <hr>
-            <p>Alter: {{ patient.alter }} Jahre</p>
-            <hr>
-            <p>Andere Informationen: {{ patient.andere_informationen }}</p>
-            <hr>
-            <p>Gesichtstyp: {{ patient.gesichtstyp }}</p>
-            <hr>
-            <p>Prothesenträger: {{ patient.prothesenträger }}</p>
-            <hr>
-            <p>Prothese: {{ patient.prothese }}</p>
-            <hr>
-            <p>Abdruck Zeitpunkt: {{ patient.abdruck_zeitpunkt }}</p>
-            <hr>
-            <p>Abdruck Ort: {{ patient.abdruck_ort }}</p>
-            <hr>
+            {% include 'patients/patient_detail.html' with patient=patient%}
         </div>
     </div>
     <div class="accordion-item">
