Add new field mm to html and views, overwork loads to serve stl files from patient

--- a/airtecWebservice/patients/templates/patients/patient_detail.html
+++ b/airtecWebservice/patients/templates/patients/patient_detail.html
@@ -10,6 +10,7 @@
             <li class="list-group-item"><strong>Gesichtstyp</strong> {{ patient.gesichtstyp }}</li>
             <li class="list-group-item"><strong>Prothesenträger:</strong> {{ patient.prothesenträger }}</li>
             <li class="list-group-item"><strong>Prothse:</strong> {{ patient.prothese }}</li>
+            <li class="list-group-item"><strong>Unterkieferabsenkung im Schlaf (mm):</strong> {{ patient.schlaf_unterkiefer_mm }}</li>
         </ul>
     </div>
     <div class="col-md-6 card">
