--- a/airtecWebservice/patients/templates/patients/create_patient.html
+++ b/airtecWebservice/patients/templates/patients/create_patient.html
@@ -6,8 +6,9 @@
         <div class="row">
             <div class="col-md-6 offset-md-3">
                 <h2>Create Patient</h2>
-                <form method="POST">
+                <form method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
+                    {{ form.non_field_errors }}
                     {{ form|crispy }}
                     <button type="submit" class="btn btn-primary">Create</button>
                 </form>
