--- a/airtecWebservice/patients/templates/patients/patient_detail.html
+++ b/airtecWebservice/patients/templates/patients/patient_detail.html
@@ -15,6 +15,7 @@
     </div>
     <div class="col-md-6 card">
         <div class="card-body " id="stlFaceCard">
+            <script> const patientId = {{ patient.patient_id }}; </script>
             <script type="module" src="{% static 'javascript/faceScanLoader.js' %}"></script>
         </div>
     </div>
