--- a/airtecWebservice/patients/templates/patients/create_patient.html
+++ b/airtecWebservice/patients/templates/patients/create_patient.html
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 offset-md-3">
-                <h2>Create Patient</h2>
+                <h2>Patienten anlegen</h2>
                 <form method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form.non_field_errors }}
