--- a/airtecWebservice/templates/base.html
+++ b/airtecWebservice/templates/base.html
@@ -29,10 +29,10 @@
           <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'list_patients' %}">List Patients</a>
+          <a class="nav-link" href="{% url 'list_patients' %}">Patienten Liste</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'create_patient' %}">Add Patient</a>
+          <a class="nav-link" href="{% url 'create_patient' %}">Patient anlegen</a>
         </li>
         <!--If user is logged in show logout otherwise show login-->
         {% if user.is_authenticated %}
