Change language for variables to german, change names to be snakeconform

--- a/airtecWebservice/patients/templates/patients/create_patient.html
+++ b/airtecWebservice/patients/templates/patients/create_patient.html
@@ -10,7 +10,7 @@
                     {% csrf_token %}
                     {{ form.non_field_errors }}
                     {{ form|crispy }}
-                    <button type="submit" class="btn btn-primary">Create</button>
+                    <button type="submit" class="btn btn-primary">Patienten anlegen</button>
                 </form>
             </div>
         </div>
