--- a/airtecWebservice/patients/templates/patients/home.html
+++ b/airtecWebservice/patients/templates/patients/home.html
@@ -4,6 +4,6 @@
 
 {% block content %}
     <div>
-        Welcome to the Home Page.
+        Wilkommen auf der Homepage.
     </div>
 {% endblock %}
