--- a/airtecWebservice/patients/templates/patients/list_patients.html
+++ b/airtecWebservice/patients/templates/patients/list_patients.html
@@ -7,9 +7,9 @@
 
             <form method="get">
                 <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Search patients" name="q" value="{{ request.GET.q }}">
+                <input type="text" class="form-control" placeholder="Patienten nach ID suchen" name="q" value="{{ request.GET.q }}">
                 <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="submit">Search</button>
+                    <button class="btn btn-outline-secondary" type="submit">Suchen</button>
                 </div>
                 </div>
             </form>
