--- a/airtecWebservice/patients/templates/patients/patient_detail.html
+++ b/airtecWebservice/patients/templates/patients/patient_detail.html
@@ -2,15 +2,15 @@
 <div class="row">
     <div class="col-md-6 card">
         <ul class="list-group">
-            <li class="list-group-item"><strong>Größe:</strong> {{ patient.größe }} cm</li>
-            <li class="list-group-item"><strong>Gewicht:</strong> {{ patient.gewicht }} kg</li>
-            <li class="list-group-item"><strong>Geschlecht:</strong> {{ patient.geschlecht }}</li>
-            <li class="list-group-item"><strong>Alter:</strong> {{ patient.alter }} Jahre</li>
-            <li class="list-group-item"><strong>Andere Informationen:</strong> {{ patient.andere_informationen }}</li>
-            <li class="list-group-item"><strong>Gesichtstyp</strong> {{ patient.gesichtstyp }}</li>
-            <li class="list-group-item"><strong>Prothesenträger:</strong> {{ patient.prothesenträger }}</li>
-            <li class="list-group-item"><strong>Prothse:</strong> {{ patient.prothese }}</li>
-            <li class="list-group-item"><strong>Unterkieferabsenkung im Schlaf (mm):</strong> {{ patient.schlaf_unterkiefer_mm }}</li>
+            <li class="list-group-item"><strong>Größe: </strong> {{ patient.groeße }} cm</li>
+            <li class="list-group-item"><strong>Gewicht: </strong> {{ patient.gewicht }} kg</li>
+            <li class="list-group-item"><strong>Geschlecht: </strong> {{ patient.geschlecht }}</li>
+            <li class="list-group-item"><strong>Alter: </strong> {{ patient.alter }} Jahre</li>
+            <li class="list-group-item"><strong>Andere Informationen: </strong> {{ patient.andere_informationen }}</li>
+            <li class="list-group-item"><strong>Gesichtstyp: </strong> {{ patient.gesichtstyp }}</li>
+            <li class="list-group-item"><strong>Prothesenträger: </strong> {{ patient.prothesentraeger }}</li>
+            <li class="list-group-item"><strong>Prothse: </strong> {{ patient.prothese }}</li>
+            <li class="list-group-item"><strong>Unterkieferabsenkung im Schlaf (mm): </strong> {{ patient.schlaf_unterkiefer_mm }}</li>
         </ul>
     </div>
     <div class="col-md-6 card">
