--- a/airtecWebservice/patients/templates/patients/create_mask.html
+++ b/airtecWebservice/patients/templates/patients/create_mask.html
@@ -5,11 +5,11 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 offset-md-3">
-                <h2>Create Mask</h2>
+                <h2>Maske erstellen</h2>
                 <form method="POST">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button type="submit" class="btn btn-primary">Create</button>
+                    <button type="submit" class="btn btn-primary">Maske erstellen</button>
                 </form>
             </div>
         </div>
