--- a/airtecWebservice/patients/templates/patients/detail.html
+++ b/airtecWebservice/patients/templates/patients/detail.html
@@ -6,7 +6,7 @@
     <div class="accordion-item">
         <h2 class="accordion-header" id="headingPatient">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-            Patient Information
+            Patientendetails
         </button>
         </h2>
         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingPatient" data-bs-parent="#accordionPatientInformation">
@@ -17,14 +17,14 @@
     <div class="accordion-item">
         <h2 class="accordion-header" id="headingMask">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseMask" aria-expanded="false" aria-controls="collapseMask">
-            Patients Mask
+            Details Maske(n) des Patienten
         </button>
         </h2>
         <div id="collapseMask" class="accordion-collapse collapse" aria-labelledby="headingMask" data-bs-parent="#accordionPatientInformation">
           <div class="accordion-body">
             {{patient.mask}}
             {% include 'patients/mask_detail.html' with masken=patient.masken %}
-            <a class="btn btn-primary" href="{% url 'create_mask' patient.patient_id%}">Create Mask</a>
+            <a class="btn btn-primary" href="{% url 'create_mask' patient.patient_id%}">Maske erstellen</a>
         </div>
         </div>
     </div>
